NodeJS/Secret/nodejs-with-Ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      name: nodejs
  template:
    metadata:
      labels:
        name: nodejs
    spec:
      containers:
      - name: nodejs
        image: raxer/nodejs-api
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs
spec:
  #type: LoadBalancer
  ports:
    - port: 3000
      #nodePort: 30080
  selector:
    name: nodejs
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: js.rafifauz.site
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: nodejs
          servicePort: 3000
